[Autofill] Only show autocomplete console warnings if we recognize the type.

Bug: 849658
Test: FormCacheTest
Change-Id: I5b32002958179b18491269aea874ec462266c0d9
Reviewed-on: https://chromium-review.googlesource.com/1086984
Commit-Queue: Mathieu Perreault <mathp@chromium.org>
Reviewed-by: Sebastien Seguin-Gagnon <sebsg@chromium.org>
Cr-Commit-Position: refs/heads/master@{#564615}
Former-commit-id: 7f47dadcb89ffe5da2c1520ccb94f9872b108fde