components/autofill/content/renderer/form_cache.cc
@@ -8,6 +8,7 @@
 #include <string>
 #include <utility>
 
+#include "base/feature_list.h"
 #include "base/logging.h"
 #include "base/macros.h"
 #include "base/stl_util.h"
@@ -18,6 +19,7 @@
 #include "components/autofill/content/renderer/form_autofill_util.h"
 #include "components/autofill/content/renderer/page_form_analyser_logger.h"
 #include "components/autofill/core/common/autofill_constants.h"
+#include "components/autofill/core/common/autofill_features.h"
 #include "components/autofill/core/common/form_data_predictions.h"
 #include "components/strings/grit/components_strings.h"
 #include "third_party/blink/public/platform/web_string.h"
@@ -48,74 +50,106 @@ namespace autofill {
 
 namespace {
 
+static const char* kSupportedAutocompleteTypes[] = {"given-name",
+                                                    "additional-name",
+                                                    "family-name",
+                                                    "name",
+                                                    "honorific-suffix",
+                                                    "email",
+                                                    "tel-local",
+                                                    "tel-area-code",
+                                                    "tel-country-code",
+                                                    "tel-national",
+                                                    "tel",
+                                                    "tel-extension",
+                                                    "street-address",
+                                                    "address-line1",
+                                                    "address-line2",
+                                                    "address-line3",
+                                                    "address-level1",
+                                                    "address-level2",
+                                                    "address-level3",
+                                                    "postal-code",
+                                                    "country-name",
+                                                    "cc-name",
+                                                    "cc-given-name",
+                                                    "cc-family-name",
+                                                    "cc-number",
+                                                    "cc-exp-month",
+                                                    "cc-exp-year",
+                                                    "cc-exp",
+                                                    "cc-type",
+                                                    "cc-csc",
+                                                    "organization"};
+
 // For a given |type| (a string representation of enum values), return the
 // appropriate autocomplete value that should be suggested to the website
 // developer.
 const char* MapTypePredictionToAutocomplete(base::StringPiece type) {
   if (type == "NAME_FIRST")
-    return "given-name";
+    return kSupportedAutocompleteTypes[0];
   if (type == "NAME_MIDDLE")
-    return "additional-name";
+    return kSupportedAutocompleteTypes[1];
   if (type == "NAME_LAST")
-    return "family-name";
+    return kSupportedAutocompleteTypes[2];
   if (type == "NAME_FULL")
-    return "name";
+    return kSupportedAutocompleteTypes[3];
   if (type == "NAME_SUFFIX")
-    return "honorific-suffix";
+    return kSupportedAutocompleteTypes[4];
   if (type == "EMAIL_ADDRESS")
-    return "email";
+    return kSupportedAutocompleteTypes[5];
   if (type == "PHONE_HOME_NUMBER")
-    return "tel-local";
+    return kSupportedAutocompleteTypes[6];
   if (type == "PHONE_HOME_CITY_CODE")
-    return "tel-area-code";
+    return kSupportedAutocompleteTypes[7];
   if (type == "PHONE_HOME_COUNTRY_CODE")
-    return "tel-country-code";
+    return kSupportedAutocompleteTypes[8];
   if (type == "PHONE_HOME_CITY_AND_NUMBER")
-    return "tel-national";
+    return kSupportedAutocompleteTypes[9];
   if (type == "PHONE_HOME_WHOLE_NUMBER")
-    return "tel";
+    return kSupportedAutocompleteTypes[10];
   if (type == "PHONE_HOME_EXTENSION")
-    return "tel-extension";
+    return kSupportedAutocompleteTypes[11];
   if (type == "ADDRESS_HOME_STREET_ADDRESS")
-    return "street-address";
-  if (type == "ADDRESS_HOME_DEPENDENT_LOCALITY")
-    return "address-level3";
+    return kSupportedAutocompleteTypes[12];
   if (type == "ADDRESS_HOME_LINE1")
-    return "address-line1";
+    return kSupportedAutocompleteTypes[13];
   if (type == "ADDRESS_HOME_LINE2")
-    return "address-line2";
+    return kSupportedAutocompleteTypes[14];
   if (type == "ADDRESS_HOME_LINE3")
-    return "address-line3";
+    return kSupportedAutocompleteTypes[15];
   if (type == "ADDRESS_HOME_CITY")
-    return "address-level2";
+    return kSupportedAutocompleteTypes[16];
   if (type == "ADDRESS_HOME_STATE")
-    return "address-level1";
+    return kSupportedAutocompleteTypes[17];
+  if (type == "ADDRESS_HOME_DEPENDENT_LOCALITY")
+    return kSupportedAutocompleteTypes[18];
   if (type == "ADDRESS_HOME_ZIP")
-    return "postal-code";
+    return kSupportedAutocompleteTypes[19];
   if (type == "ADDRESS_HOME_COUNTRY")
-    return "country-name";
+    return kSupportedAutocompleteTypes[20];
   if (type == "CREDIT_CARD_NAME_FULL")
-    return "cc-name";
+    return kSupportedAutocompleteTypes[21];
   if (type == "CREDIT_CARD_NAME_FIRST")
-    return "cc-given-name";
+    return kSupportedAutocompleteTypes[22];
   if (type == "CREDIT_CARD_NAME_LAST")
-    return "cc-family-name";
+    return kSupportedAutocompleteTypes[23];
   if (type == "CREDIT_CARD_NUMBER")
-    return "cc-number";
+    return kSupportedAutocompleteTypes[24];
   if (type == "CREDIT_CARD_EXP_MONTH")
-    return "cc-exp-month";
+    return kSupportedAutocompleteTypes[25];
   if (type == "CREDIT_CARD_EXP_2_DIGIT_YEAR" ||
       type == "CREDIT_CARD_EXP_4_DIGIT_YEAR")
-    return "cc-exp-year";
+    return kSupportedAutocompleteTypes[26];
   if (type == "CREDIT_CARD_EXP_DATE_2_DIGIT_YEAR" ||
       type == "CREDIT_CARD_EXP_DATE_4_DIGIT_YEAR")
-    return "cc-exp";
+    return kSupportedAutocompleteTypes[27];
   if (type == "CREDIT_CARD_TYPE")
-    return "cc-type";
+    return kSupportedAutocompleteTypes[28];
   if (type == "CREDIT_CARD_VERIFICATION_CODE")
-    return "cc-csc";
+    return kSupportedAutocompleteTypes[29];
   if (type == "COMPANY_NAME")
-    return "organization";
+    return kSupportedAutocompleteTypes[30];
   return "";
 }
 
@@ -398,15 +432,9 @@ bool FormCache::ShowPredictions(const FormDataPredictions& form,
     // autocomplete attributes.
     const std::string predicted_autocomplete_attribute =
         MapTypePredictionToAutocomplete(field.overall_type);
-    std::string actual_autocomplete_attribute =
-        element.GetAttribute("autocomplete").Utf8();
-    if (!predicted_autocomplete_attribute.empty() &&
-        (actual_autocomplete_attribute.empty() ||
-         !base::ContainsValue(
-             base::SplitStringPiece(actual_autocomplete_attribute, " ",
-                                    base::WhitespaceHandling::TRIM_WHITESPACE,
-                                    base::SplitResult::SPLIT_WANT_NONEMPTY),
-             predicted_autocomplete_attribute))) {
+    if (ShouldShowAutocompleteConsoleWarnings(
+            predicted_autocomplete_attribute,
+            element.GetAttribute("autocomplete").Utf8())) {
       logger.Send(
           base::StringPrintf("Input elements should have autocomplete "
                              "attributes (suggested: autocomplete='%s', "
@@ -499,6 +527,38 @@ void FormCache::SaveInitialValues(
       }
     }
   }
+}
+
+bool FormCache::ShouldShowAutocompleteConsoleWarnings(
+    const std::string& predicted_autocomplete,
+    const std::string& actual_autocomplete) {
+  if (!base::FeatureList::IsEnabled(
+          features::kAutofillShowAutocompleteConsoleWarnings)) {
+    return false;
+  }
+
+  // If we have no better prediction, do not show.
+  if (predicted_autocomplete.empty())
+    return false;
+
+  // We should show a warning if the actual autocomplete attribute is empty,
+  // or we recognize the autocomplete attribute, but we think it's the wrong
+  // one.
+  if (actual_autocomplete.empty())
+    return true;
+
+  // An autocomplete attribute can be multiple strings (e.g. "shipping name").
+  // Look at all the tokens.
+  for (base::StringPiece actual : base::SplitStringPiece(
+           actual_autocomplete, " ", base::WhitespaceHandling::TRIM_WHITESPACE,
+           base::SplitResult::SPLIT_WANT_NONEMPTY)) {
+    // If we recognize the value but it's not correct, show a warning.
+    if (base::ContainsValue(kSupportedAutocompleteTypes, actual) &&
+        actual != predicted_autocomplete) {
+      return true;
+    }
+  }
+  return false;
 }
 
 }  // namespace autofill
