components/autofill/core/common/autofill_features.h
@@ -22,6 +22,7 @@ extern const base::Feature kAutofillManualFallback;
 extern const base::Feature kAutofillRequireSecureCreditCardContext;
 extern const base::Feature kAutofillRestrictUnownedFieldsToFormlessCheckout;
 extern const base::Feature kAutofillSendExperimentIdsInPaymentsRPCs;
+extern const base::Feature kAutofillShowAutocompleteConsoleWarnings;
 extern const base::Feature kAutofillShowTypePredictions;
 extern const base::Feature kAutofillSkipComparingInferredLabels;
 extern const base::Feature kAutofillUpstreamUseGooglePayBrandingOnMobile;
